Project implementation/k8s-ai-scheduler/deploy/knative/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeml-inference
  labels:
    app.kubernetes.io/part-of: kubeml-aware
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
