Project implementation/k8s-ai-scheduler/deploy/knative/france-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeml-inference-public
  namespace: kourier-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubeml-inference.kubeml-inference.167-104-216-211.nip.io
      secretName: kubeml-inference-public-tls
  rules:
    - host: kubeml-inference.kubeml-inference.167-104-216-211.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kourier
                port:
                  number: 80
